# merlin

./: .env.example  .firebaserc  .gitignore  DEPLOY-SETUP.md  docker-compose.yml  firebase.json  firestore.rules  storage.rules
.claude/: deploy-config.yaml
.github/workflows/: deploy.yml  rollback.yml
.planning/: PLAN-REVIEW.md  PLAN.md
backend/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/scripts/: check_user_prefs.py  debug_user_uids.py  diagnose_gupy.py  find_recent_saves.py  inspect_matches.py  security-check.sh  sim_match.py
extension/: .gitignore  HANDOVER.md  QA_CHECKLIST.md  STORE_LISTING.md  manifest.json  package-lock.json  package.json  setup.sh  tsconfig.json  webpack.config.js
extension/scripts/: build-store.sh
extension/test/: catho-utils.test.mjs  content-storage-boundary.test.mjs  dom-helpers.test.mjs  queue-diagnostics.test.mjs  queue-eligibility.test.mjs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: admin-guard.tsx  auth-guard.tsx  batch-preflight-sheet.tsx  client-layout.tsx  dashboard-footer.tsx  dashboard-nav.tsx  extension-install-banner.tsx  feedback-widget.tsx  job-card.tsx  job-preferences-form.tsx  language-toggle.tsx  mobile-nav.tsx  processing-bar.tsx  (+4 more)
scrapers/: pyproject.toml
scrapers/scrapers/: __init__.py  catho.py  gupy.py  programathor.py  scrapfly_client.py  types.py  vagas.py
scripts/: setup-cicd.sh
tests/: requirements-test.txt
(+167 files in other folders)
