[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "scrapfly-sdk==0.10.3",
    "structlog>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*"]
